--- a/Convolution.Unity/Assets/Core/Common/Convolution.Unity.Common.asmdef
+++ b/Convolution.Unity/Assets/Core/Common/Convolution.Unity.Common.asmdef
@@ -1,3 +1,18 @@
 {
-	"name": "Convolution.Unity.Common"
+    "name": "Convolution.Unity.Common",
+    "rootNamespace": "Convolution",
+    "references": [
+        "GUID:e761b36537be1ee4ab8718885264eab8",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:d733c7d83c906e044ae8afed0a5595b0"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
