--- a/Convolution.Unity/Assets/Core/Gameplay/Convolution.Unity.Gameplay.asmdef
+++ b/Convolution.Unity/Assets/Core/Gameplay/Convolution.Unity.Gameplay.asmdef
@@ -1,9 +1,12 @@
 {
-    "name": "Convolution.Unity.MiniGames",
+    "name": "Convolution.Unity.Gameplay",
     "rootNamespace": "Convolution",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:a33276f181eec8648a25923e1a14abf5"
+        "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
+        "GUID:a33276f181eec8648a25923e1a14abf5",
+        "GUID:2be7ed02fca853e4f985c6ccb1cbaa07",
+        "GUID:bccf110ec9abc8045b5e1c7fe6eaa136"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
