--- a/Convolution.Unity/Assets/Core/Interaction/Convolution.Unity.Interaction.asmdef
+++ b/Convolution.Unity/Assets/Core/Interaction/Convolution.Unity.Interaction.asmdef
@@ -1,9 +1,12 @@
 {
     "name": "Convolution.Unity.Interaction",
-    "rootNamespace": "",
+    "rootNamespace": "Convolution",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:a33276f181eec8648a25923e1a14abf5"
+        "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
+        "GUID:a33276f181eec8648a25923e1a14abf5",
+        "GUID:e761b36537be1ee4ab8718885264eab8",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
