--- a/Convolution.Unity/Assets/Core/MiniGames/Embedded/Sample/Convolution.Unity.MiniGames.Sample.asmdef
+++ b/Convolution.Unity/Assets/Core/MiniGames/Embedded/Sample/Convolution.Unity.MiniGames.Sample.asmdef
@@ -1,13 +1,10 @@
 {
-    "name": "Convolution.Unity.Gameplay",
-    "rootNamespace": "Convolution",
+    "name": "Convolution.Unity.MiniGames.Sample",
+    "rootNamespace": "",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
         "GUID:a33276f181eec8648a25923e1a14abf5",
-        "GUID:bccf110ec9abc8045b5e1c7fe6eaa136",
-        "GUID:d733c7d83c906e044ae8afed0a5595b0",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:bccf110ec9abc8045b5e1c7fe6eaa136"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
