--- a/Convolution.Unity/Assets/Core/Orchestration.Editor/Convolution.Unity.Orchestration.Editor.asmdef
+++ b/Convolution.Unity/Assets/Core/Orchestration.Editor/Convolution.Unity.Orchestration.Editor.asmdef
@@ -1,11 +1,14 @@
 {
-    "name": "Convolution.Unity.Handling",
+    "name": "Convolution.Unity.Orchestration.Editor",
     "rootNamespace": "Convolution",
     "references": [
-        "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:e761b36537be1ee4ab8718885264eab8"
+        "GUID:92e78b47564d9ba47a29a40480b6c026",
+        "GUID:69448af7b92c7f342b298e06a37122aa",
+        "GUID:9e24947de15b9834991c9d8411ea37cf"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
