--- a/Convolution.Unity/Assets/Core/Orchestration/Convolution.Unity.Orchestration.asmdef
+++ b/Convolution.Unity/Assets/Core/Orchestration/Convolution.Unity.Orchestration.asmdef
@@ -1,18 +1,19 @@
 {
-    "name": "Convolution.Unity.Scenes",
+    "name": "Convolution.Unity.Orchestration",
     "rootNamespace": "Convolution",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
         "GUID:a33276f181eec8648a25923e1a14abf5",
         "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
-        "GUID:2be7ed02fca853e4f985c6ccb1cbaa07",
         "GUID:bccf110ec9abc8045b5e1c7fe6eaa136",
         "GUID:334f39da947c1294fb9fa8c9a69bc667",
         "GUID:7d7ea9fdd4c28b44b8d3c9318bf2b3a0",
         "GUID:e761b36537be1ee4ab8718885264eab8",
         "GUID:d733c7d83c906e044ae8afed0a5595b0",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
