--- a/Convolution.Unity/Assets/Core/Controllers.Editor/Convolution.Unity.Controllers.Editor.asmdef
+++ b/Convolution.Unity/Assets/Core/Controllers.Editor/Convolution.Unity.Controllers.Editor.asmdef
@@ -1,12 +1,13 @@
 {
-    "name": "Convolution.Unity.Controllers",
+    "name": "Convolution.Unity.Controllers.Editor",
     "rootNamespace": "Convolution",
     "references": [
-        "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
-        "GUID:9f6e6122364362f438fddd77c1ce05f8"
+        "GUID:a33276f181eec8648a25923e1a14abf5",
+        "GUID:bccf110ec9abc8045b5e1c7fe6eaa136"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
