--- a/Convolution.Unity/Assets/Core/Placement.Editor/Convolution.Unity.Placement.Editor.asmdef
+++ b/Convolution.Unity/Assets/Core/Placement.Editor/Convolution.Unity.Placement.Editor.asmdef
@@ -1,12 +1,14 @@
 {
-    "name": "Convolution.Unity.Controllers",
+    "name": "Convolution.Unity.Placement.Editor",
     "rootNamespace": "Convolution",
     "references": [
-        "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
-        "GUID:9f6e6122364362f438fddd77c1ce05f8"
+        "GUID:9f6e6122364362f438fddd77c1ce05f8",
+        "GUID:7d7ea9fdd4c28b44b8d3c9318bf2b3a0",
+        "GUID:e761b36537be1ee4ab8718885264eab8"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
