--- a/Convolution.Unity/Assets/Core/Placement/Convolution.Unity.Placement.asmdef
+++ b/Convolution.Unity/Assets/Core/Placement/Convolution.Unity.Placement.asmdef
@@ -1,10 +1,9 @@
 {
-    "name": "Convolution.Unity.Controllers",
+    "name": "Convolution.Unity.Placement",
     "rootNamespace": "Convolution",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:32bdfea8680ec5c41bbc6098e8bb005c",
-        "GUID:9f6e6122364362f438fddd77c1ce05f8"
+        "GUID:e761b36537be1ee4ab8718885264eab8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
