--- a/Convolution.Unity/Assets/Core/Gameplay/Convolution.Unity.Gameplay.asmdef
+++ b/Convolution.Unity/Assets/Core/Gameplay/Convolution.Unity.Gameplay.asmdef
@@ -7,7 +7,9 @@
         "GUID:a33276f181eec8648a25923e1a14abf5",
         "GUID:bccf110ec9abc8045b5e1c7fe6eaa136",
         "GUID:d733c7d83c906e044ae8afed0a5595b0",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:770e1d1230db51d409c9d2d63fb96a6d",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
