--- a/Convolution.Unity/Assets/Core/Interaction/Convolution.Unity.Interaction.asmdef
+++ b/Convolution.Unity/Assets/Core/Interaction/Convolution.Unity.Interaction.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Convolution",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:e761b36537be1ee4ab8718885264eab8"
+        "GUID:e761b36537be1ee4ab8718885264eab8",
+        "GUID:7d7ea9fdd4c28b44b8d3c9318bf2b3a0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
