--- a/Convolution.Unity/Assets/Core/MiniGames/Convolution.Unity.MiniGames.asmdef
+++ b/Convolution.Unity/Assets/Core/MiniGames/Convolution.Unity.MiniGames.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "Convolution",
     "references": [
         "GUID:4a2cbbc2218ef9d4fbdc890c2f15375f",
-        "GUID:a33276f181eec8648a25923e1a14abf5"
+        "GUID:a33276f181eec8648a25923e1a14abf5",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:7d7ea9fdd4c28b44b8d3c9318bf2b3a0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
