--- a/Convolution.Unity/Assets/Core/Orchestration/Convolution.Unity.Orchestration.asmdef
+++ b/Convolution.Unity/Assets/Core/Orchestration/Convolution.Unity.Orchestration.asmdef
@@ -14,7 +14,8 @@
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:9f6e6122364362f438fddd77c1ce05f8"
+        "GUID:9f6e6122364362f438fddd77c1ce05f8",
+        "GUID:770e1d1230db51d409c9d2d63fb96a6d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
