--- a/Convolution.Unity/Packages/DevKit/package.json
+++ b/Convolution.Unity/Packages/DevKit/package.json
@@ -11,7 +11,7 @@
     "Modding"
   ],
   "author": {
-    "name": "Frogmit",
+    "name": "Mithenson",
     "email": "frogmithenson@gmail.com"
   },
   "unityRelease": "20f1",
