--- a/Convolution.Unity/Packages/Maxim/package.json
+++ b/Convolution.Unity/Packages/Maxim/package.json
@@ -10,7 +10,7 @@
     "Fast development"
   ],
   "author": {
-    "name": "Frogmit",
+    "name": "Mithenson",
     "email": "frogmithenson@gmail.com"
   },
   "unityRelease": "20f1",
