--- a/Convolution.Unity/Packages/Maxim/Runtime/AssetManagement/Maxim.AssetManagement.asmdef
+++ b/Convolution.Unity/Packages/Maxim/Runtime/AssetManagement/Maxim.AssetManagement.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Maxim.Unity.AssetManagement",
+    "name": "Maxim.AssetManagement",
     "rootNamespace": "",
     "references": [
         "Zenject",
