--- a/Convolution.Unity/Packages/VirtCons/Runtime/Controllers/VirtCons.Controllers.asmdef
+++ b/Convolution.Unity/Packages/VirtCons/Runtime/Controllers/VirtCons.Controllers.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Maxim.Unity.Common",
+    "name": "VirtCons.Controllers",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
