--- a/Convolution.Unity/Assets/Core/Gameplay/VirtCons.Internal.Gameplay.asmdef
+++ b/Convolution.Unity/Assets/Core/Gameplay/VirtCons.Internal.Gameplay.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "VirtCons.Internal.Gameplay",
-    "rootNamespace": "",
+    "rootNamespace": "VirtCons.Internal",
     "references": [
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:44fa23cdc1dae524f9e63051e638d0ad",
         "GUID:1d4c1b4ee9fa1f644b0c8b20fea6f204"
     ],
