--- a/Convolution.Unity/Assets/Core/Editor/VirtCons.Internal.Editor.asmdef
+++ b/Convolution.Unity/Assets/Core/Editor/VirtCons.Internal.Editor.asmdef
@@ -1,16 +1,18 @@
 {
-    "name": "VirtCons.Internal.Application.Windows",
+    "name": "VirtCons.Internal.Editor",
     "rootNamespace": "VirtCons.Internal",
     "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:255495f831562424d8da1b8095894079",
         "GUID:615fc22abd9a5f14485dc992dddaadc6",
         "GUID:2e05e0c63be67f94897b094828f76e6b",
         "GUID:83ae478fdd2cf9c4fa99585b174e581c",
-        "GUID:44fa23cdc1dae524f9e63051e638d0ad",
-        "GUID:1d4c1b4ee9fa1f644b0c8b20fea6f204"
+        "GUID:cf378ee93dbe7f9408c1082968a3611e",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
